--- a/index.html
+++ b/index.html
@@ -52,6 +52,16 @@
         <div class="col-sm-6 col-lg-4">
           <section class="card mb-3">
             <header class="card-header">
+              <h4 class="mb-0">Blog</h4>
+            </header>
+            <div class="list-group list-group-flush">
+              <a href="https://fuji-nakahara.hatenablog.com/" target="_blank" class="list-group-item list-group-item-action">フジ・ナカハラのSF日記</a>
+            </div>
+          </section>
+        </div>
+        <div class="col-sm-6 col-lg-4">
+          <section class="card mb-3">
+            <header class="card-header">
               <h4 class="mb-0">Accounts</h4>
             </header>
             <div class="list-group list-group-flush">
