Add hatena profile

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             <div class="list-group list-group-flush">
               <a href="https://twitter.com/fuji_nakahara" target="_blank" class="list-group-item list-group-item-action"><i class="fab fa-twitter"></i> Twitter</a>
               <a href="https://github.com/fuji-nakahara" target="_blank" class="list-group-item list-group-item-action"><i class="fab fa-github"></i> GitHub</a>
+              <a href="http://profile.hatena.ne.jp/fuji-nakahara/" target="_blank" class="list-group-item list-group-item-action">Hatena</a>
             </div>
           </section>
         </div>
