--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
               <h4 class="mb-0">About</h4>
             </header>
             <div class="card-body">
-              <p>
-                <a href="http://school.genron.co.jp/sf/" target="_blank">ゲンロン 大森望 SF創作講座</a> 第3期受講生
-              </p>
+              <ul class="list-unstyled">
+                <li><a href="http://school.genron.co.jp/sf/" target="_blank">ゲンロン 大森望 SF創作講座</a> 第3期受講生</li>
+                <li>ソフトウェアエンジニア</li>
+              </ul>
               <dl>
                 <dt>Email</dt>
                 <dd><a href="mailto:fujinakahara2032@gmail.com">fujinakahara2032@gmail.com</a></dd>
