Add ids to sections

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </header>
       <div class="row">
         <div class="col-sm-6 col-lg-4">
-          <section class="card mb-3">
+          <section class="card mb-3" id="about">
             <header class="card-header">
               <h4 class="mb-0">About</h4>
             </header>
@@ -50,7 +50,7 @@
             </div>
           </section>
         </div>
-        <div class="col-sm-6 col-lg-4">
+        <div class="col-sm-6 col-lg-4" id="blog">
           <section class="card mb-3">
             <header class="card-header">
               <h4 class="mb-0">Blog</h4>
@@ -63,7 +63,7 @@
           </section>
         </div>
         <div class="col-sm-6 col-lg-4">
-          <section class="card mb-3">
+          <section class="card mb-3" id="accounts">
             <header class="card-header">
               <h4 class="mb-0">Accounts</h4>
             </header>
