--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="profile">
     <meta property="og:locale" content="ja_JP">
     <meta name="twitter:site" content="@fuji_nakahara">
-    <link rel="shortcut icon" href="/images/favicon.ico">
+    <link rel="shortcut icon" href="./images/favicon.ico">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/brands.css" integrity="sha384-KtmfosZaF4BaDBojD9RXBSrq5pNEO79xGiggBxf8tsX+w2dBRpVW5o0BPto2Rb2F" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/fontawesome.css" integrity="sha384-8WwquHbb2jqa7gKWSoAwbJBV2Q+/rQRss9UXL5wlvXOZfSodONmVnifo/+5xJIWX" crossorigin="anonymous">
@@ -27,7 +27,7 @@
   <body>
     <section class="container">
       <header class="text-center my-5">
-        <img src="/images/avatar.png" alt="avatar" width="150" height="150" class="border rounded-circle m-2">
+        <img src="./images/avatar.png" alt="avatar" width="150" height="150" class="border rounded-circle m-2">
         <h1>フジ・ナカハラ</h1>
       </header>
       <div class="row">
