--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
               <a href="https://twitter.com/fuji_nakahara" target="_blank" class="list-group-item list-group-item-action"><i class="fab fa-twitter"></i> Twitter</a>
               <a href="https://github.com/fuji-nakahara" target="_blank" class="list-group-item list-group-item-action"><i class="fab fa-github"></i> GitHub</a>
               <a href="http://profile.hatena.ne.jp/fuji-nakahara/" target="_blank" class="list-group-item list-group-item-action">Hatena</a>
+              <a href="https://kakuyomu.jp/users/fuji-nakahara" target="_blank" class="list-group-item list-group-item-action">カクヨム</a>
             </div>
           </section>
         </div>
