Add note account

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
               <a href="https://github.com/fuji-nakahara" target="_blank" class="list-group-item list-group-item-action"><i class="fab fa-github"></i> GitHub</a>
               <a href="http://profile.hatena.ne.jp/fuji-nakahara/" target="_blank" class="list-group-item list-group-item-action">Hatena</a>
               <a href="https://kakuyomu.jp/users/fuji-nakahara" target="_blank" class="list-group-item list-group-item-action">カクヨム</a>
+              <a href="https://note.mu/fuji_nakahara" target="_blank" class="list-group-item list-group-item-action">note</a>
             </div>
           </section>
         </div>
