--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
               <h4 class="mb-0">Accounts</h4>
             </header>
             <div class="list-group list-group-flush">
+              <a href="http://school.genron.co.jp/works/sf/2018/students/fujinakahara/" target="_blank" class="list-group-item list-group-item-action">SF創作講座</a>
               <a href="https://twitter.com/fuji_nakahara" target="_blank" class="list-group-item list-group-item-action"><i class="fab fa-twitter"></i> Twitter</a>
               <a href="https://github.com/fuji-nakahara" target="_blank" class="list-group-item list-group-item-action"><i class="fab fa-github"></i> GitHub</a>
               <a href="http://profile.hatena.ne.jp/fuji-nakahara/" target="_blank" class="list-group-item list-group-item-action">Hatena</a>
