Add structured data

--- a/index.html
+++ b/index.html
@@ -23,6 +23,21 @@
       gtag('js', new Date());
       gtag('config', 'UA-118273401-1');
     </script>
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "Person",
+        "url": "https://fujinakahara.com/",
+        "sameAs": [
+          "https://fuji-nakahara.hatenablog.com/",
+          "https://twitter.com/fuji_nakahara",
+          "https://github.com/fuji-nakahara"
+        ],
+        "name": "フジ・ナカハラ",
+        "image": "https://fujinakahara.com/images/avatar.png",
+        "email": "fujinakahara2032@gmail.com"
+      }
+      </script>
   </head>
   <body>
     <section class="container">
