--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
   <h1>{{ site.title }}</h1>
 </header>
 <div class="row">
-  <div class="col-sm-6 col-lg-4">
+  <div class="col-sm-6 col-lg-4 col-xl-3">
     <section class="card mb-3" id="about">
       <header class="card-header">
         <h4 class="mb-0">About</h4>
@@ -32,7 +32,19 @@ layout: default
       </div>
     </section>
   </div>
-  <div class="col-sm-6 col-lg-4" id="blog">
+  <div class="col-sm-6 col-lg-4 col-xl-3">
+    <section class="card mb-3" id="works">
+      <header class="card-header">
+        <h4 class="mb-0">Works</h4>
+      </header>
+      <div class="list-group list-group-flush">
+        {% for work in site.data.works %}
+          <a href="{{ work.url }}" class="list-group-item list-group-item-action">{{ work.title }}</a>
+        {% endfor %}
+      </div>
+    </section>
+  </div>
+  <div class="col-sm-6 col-lg-4 col-xl-3" id="blog">
     <section class="card mb-3">
       <header class="card-header d-flex justify-content-between align-items-baseline">
         <h4 class="mb-0">Blog</h4>
@@ -42,7 +54,7 @@ layout: default
       </div>
     </section>
   </div>
-  <div class="col-sm-6 col-lg-4">
+  <div class="col-sm-6 col-lg-4 col-xl-3">
     <section class="card mb-3" id="accounts">
       <header class="card-header">
         <h4 class="mb-0">Accounts</h4>
