--- a/public/index.html
+++ b/public/index.html
@@ -6,30 +6,30 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>フジ・ナカハラ</title>
-    <meta name="description" content="フジ・ナカハラのポートフォリオ">
+    <title><%= VUE_APP_NAME %></title>
+    <meta name="description" content="<%= VUE_APP_DESCRIPTION %>">
 
     <!-- FIXME: Add og:image -->
-    <meta property="og:url" content="https://fuji-nakahara.github.io">
-    <meta property="og:title" content="フジ・ナカハラ">
-    <meta property="og:description" content="フジ・ナカハラのポートフォリオ">
+    <meta property="og:url" content="<%= VUE_APP_URL %><%= BASE_URL %>">
+    <meta property="og:title" content="<%= VUE_APP_NAME %>">
+    <meta property="og:description" content="<%= VUE_APP_DESCRIPTION %>">
     <meta property="og:type" content="profile">
     <meta property="og:locale" content="ja_JP">
-    <meta name="twitter:site" content="@fuji_nakahara">
+    <meta name="twitter:site" content="@<%= VUE_APP_TWITTER_USERNAME %>">
 
     <!-- FIXME: Add image -->
     <script type="application/ld+json">
       {
         "@context": "http://schema.org",
         "@type": "Person",
-        "url": "https://fuji-nakahara.github.io",
+        "url": "<%= VUE_APP_URL %><%= BASE_URL %>",
         "sameAs": [
           "https://fuji-nakahara.hatenablog.com/",
-          "https://twitter.com/fuji_nakahara",
-          "https://github.com/fuji-nakahara"
+          "https://twitter.com/<%= VUE_APP_TWITTER_USERNAME %>",
+          "https://github.com/<%= VUE_APP_GITHUB_USERNSME %>"
         ],
-        "name": "フジ・ナカハラ",
-        "email": "fujinakahara2032@gmail.com"
+        "name": "<%= VUE_APP_NAME %>",
+        "email": "<%= VUE_APP_EMAIL %>"
       }
     </script>
   </head>
