Fix typo NSME -> NAME

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
         "sameAs": [
           "https://fuji-nakahara.hatenablog.com/",
           "https://twitter.com/<%= VUE_APP_TWITTER_USERNAME %>",
-          "https://github.com/<%= VUE_APP_GITHUB_USERNSME %>"
+          "https://github.com/<%= VUE_APP_GITHUB_USERNAME %>"
         ],
         "name": "<%= VUE_APP_NAME %>",
         "image": "<%= VUE_APP_URL %><%= BASE_URL %>robot.png",
